--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Unai Olloquiegui</h3>
-      <p>¡Estaré encantado de poder tomar un cafe contigo! Puedes contactarme en... ↘ </strong></p>
+      <p>¡Estaré encantado de tomar un café contigo! Puedes contactarme en... ↘ </strong></p>
       <p><strong><span>unaiolloquiegui@gmail.com</span></strong> | <strong><span>+34 680140435</span></strong></p>
       <div class="copyright">
        
