--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     
         <div class="html_buttoni btn-left"> 
       <a href="#" class="btn customButtoniz large"> <img src="https://icons.iconarchive.com/icons/marcus-roberto/google-play/512/Google-Translate-icon.png" style="width:30px; margin-left:0px; margin-right:0px; "></a>
-      <a href="#" class="btn customButtoni large">English <img src="https://cdn-icons-png.flaticon.com/512/197/197374.png" style="width:20px; margin-left:4px; margin-right:4px; "></a>
+      <a href="https://portfoliounai.github.io/" class="btn customButtoni large">English <img src="https://cdn-icons-png.flaticon.com/512/197/197374.png" style="width:20px; margin-left:4px; margin-right:4px; "></a>
       <a href="https://unaiportfolio.github.io/" class="btn customButtoni large">Spanish <img src="https://cdn-icons-png.flaticon.com/512/197/197593.png" style="width:20px; margin-left:4px; margin-right:4px; "></a>
   </div>
     
